fixed alignment and formatting of anthology

--- a/src/components/static/Anthology.css
+++ b/src/components/static/Anthology.css
@@ -28,10 +28,14 @@
     margin: 0 auto;
 }
 
-#book-caption{
-    text-align: center;
-    font-style: italic;
-    font-weight: 500;
+.book-caption-center{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#bot-margin{
+    margin-bottom: 16px;
 }
 
 @media (min-width: 768px) {
@@ -50,6 +54,6 @@
     }
 
     #book img{
-        max-width: 200px;
+        max-width: 250px;
     }
 }
